--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name: 祗王橘 
 # Short bio or description (displayed in the header)
 description: 一个IT小白的成长之路
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: javascript:void(0)
 
 #
 # Flags below are optional
