--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name: 祗王橘 
 # Short bio or description (displayed in the header)
 description: 一个IT小白的成长之路
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://img.qqw21.com/article/UploadPic/2012-10/201210229441137400.jpg
+avatar: http://www.qqtouxiang.com.cn/uploads/allimg/130112/1-130112100918.jpg
 
 #
 # Flags below are optional
